# asyncified

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: channel.rs  lib.rs  oneshot.rs
