[package]
name = "asyncified"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "A small library for operating on long lived sync values in an async context"
repository = "https://github.com/jsdw/asyncified"
homepage = "https://github.com/jsdw/asyncified"

[dependencies]

[dev-dependencies]
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
